Fix GitHub Actions build error: Disable PublishTrimmed to prevent ILLink trimming failures

--- a/NukeBin.csproj
+++ b/NukeBin.csproj
@@ -16,7 +16,7 @@
     <SelfContained>true</SelfContained>
     <RuntimeIdentifiers>win-x64;win-x86;linux-x64;osx-x64</RuntimeIdentifiers>
     <PublishReadyToRun>true</PublishReadyToRun>
-    <PublishTrimmed>true</PublishTrimmed>
+    <PublishTrimmed>false</PublishTrimmed>
   </PropertyGroup>
 
 </Project>
