Remove Linux and macOS targets - focus on Windows only builds

--- a/NukeBin.csproj
+++ b/NukeBin.csproj
@@ -14,7 +14,7 @@
     <Copyright>Copyright © 2024</Copyright>
     <PublishSingleFile>true</PublishSingleFile>
     <SelfContained>true</SelfContained>
-    <RuntimeIdentifiers>win-x64;win-x86;linux-x64;osx-x64</RuntimeIdentifiers>
+    <RuntimeIdentifiers>win-x64;win-x86</RuntimeIdentifiers>
     <PublishReadyToRun>true</PublishReadyToRun>
     <PublishTrimmed>false</PublishTrimmed>
   </PropertyGroup>
